--- a/reference.bib
+++ b/reference.bib
@@ -136,7 +136,7 @@
 }
 
 @inproceedings{zhao2018minimal,
-  title={Topology-aware vm migration in bandwidth oversubscribed datacenter networks},
+  title={Minimal Rewiring: Efficient Live Expansion for Clos Data Center Networks},
   author={Zhao, Shizhen and Wang, Rui and Zhou, Junlan and Ong, Joon and Mogul, Jeffrey. C and Vahdat, Amin},
   booktitle={NSDI},
   year={2019},
@@ -201,4 +201,239 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   pages={223--228},
   year={1980},
   publisher={Elsevier}
+}
+
+@inproceedings{zhang2005finding,
+  title={Finding critical traffic matrices},
+  author={Zhang, Yin and Ge, Zihui},
+  booktitle={Dependable Systems and Networks, 2005. DSN 2005. Proceedings. International Conference on},
+  pages={188--197},
+  year={2005},
+  organization={IEEE}
+}
+
+@inproceedings{zhou2014wcmp,
+  title={WCMP: Weighted cost multipathing for improved fairness in data centers},
+  author={Zhou, Junlan and Tewari, Malveeka and Zhu, Min and Kabbani, Abdul and Poutievski, Leon and Singh, Arjun and Vahdat, Amin},
+  booktitle={Proceedings of the Ninth European Conference on Computer Systems},
+  pages={5},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{al2008scalable,
+  title={A scalable, commodity data center network architecture},
+  author={Al-Fares, Mohammad and Loukissas, Alexander and Vahdat, Amin},
+  booktitle={ACM SIGCOMM Computer Communication Review},
+  volume={38},
+  number={4},
+  pages={63--74},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{rotornet_mellette2017,
+  title={RotorNet: A scalable, low-complexity, optical datacenter network},
+  author={Mellette, William M and McGuinness, Rob and Roy, Arjun and Forencich, Alex and Papen, George and Snoeren, Alex C and Porter, George},
+  booktitle={Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+  pages={267--280},
+  year={2017},
+  organization={ACM}
+}
+
+@inproceedings{reactor_liu2014,
+  title={Circuit Switching Under the Radar with REACToR.},
+  author={Liu, He and Lu, Feng and Forencich, Alex and Kapoor, Rishi and Tewari, Malveeka and Voelker, Geoffrey M and Papen, George and Snoeren, Alex C and Porter, George},
+  booktitle={Nsdi},
+  volume={14},
+  pages={1--15},
+  year={2014}
+}
+
+@inproceedings{vahdat2011emerging,
+  title={The emerging optical data center},
+  author={Vahdat, Amin and Liu, Hong and Zhao, Xiaoxue and Johnson, Chris},
+  booktitle={Optical Fiber Communication Conference},
+  pages={OTuH2},
+  year={2011},
+  organization={Optical Society of America}
+}
+
+@inproceedings{liu2010scaling,
+  title={Scaling optical interconnects in datacenter networks opportunities and challenges for WDM},
+  author={Liu, Hong and Lam, Cedric F and Johnson, Chris},
+  booktitle={High Performance Interconnects (HOTI), 2010 IEEE 18th Annual Symposium on},
+  pages={113--116},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{fields2010transceivers,
+  title={Transceivers and optical engines for computer and datacenter interconnects},
+  author={Fields, Mitchell H and Foley, John and Kaneshiro, Ron and McColloch, Larry and Meadowcroft, David and Miller, Frederick W and Nassar, Sami and Robinson, Michael and Xu, Hui},
+  booktitle={Optical Fiber Communication Conference},
+  pages={OTuP1},
+  year={2010},
+  organization={Optical Society of America}
+}
+
+@article{zhou2017datacenter,
+  title={Datacenter optics: requirements, technologies, and trends},
+  author={Zhou, Xiang and Liu, Hong and Urata, Ryohei},
+  journal={Chinese Optics Letters},
+  volume={15},
+  number={5},
+  pages={120008},
+  year={2017},
+  publisher={Chinese Optical Society}
+}
+
+@article{cthrough_wang_2011,
+  title={c-Through: Part-time optics in data centers},
+  author={Wang, Guohui and Andersen, David G and Kaminsky, Michael and Papagiannaki, Konstantina and Ng, TS and Kozuch, Michael and Ryan, Michael},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={41},
+  number={4},
+  pages={327--338},
+  year={2011},
+  publisher={ACM}
+}
+
+@book{porter2013integrating,
+  title={Integrating microsecond circuit switching into the data center},
+  author={Porter, George and Strong, Richard and Farrington, Nathan and Forencich, Alex and Chen-Sun, Pang and Rosing, Tajana and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
+  volume={43},
+  number={4},
+  year={2013},
+  publisher={ACM}
+}
+
+@inproceedings{singla2010proteus,
+  title={Proteus: a topology malleable data center network},
+  author={Singla, Ankit and Singh, Atul and Ramachandran, Kishore and Xu, Lei and Zhang, Yueping},
+  booktitle={Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+  pages={8},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{singh2015jupiter,
+  title={Jupiter rising: A decade of clos topologies and centralized control in google's datacenter network},
+  author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and others},
+  booktitle={ACM SIGCOMM Computer Communication Review},
+  volume={45},
+  number={4},
+  pages={183--197},
+  year={2015},
+  organization={ACM}
+}
+
+@article{bunnagel1998efficient,
+  title={Efficient implementation of the Goldberg--Tarjan minimum-cost flow algorithm},
+  author={B{\"u}nnagel, Ursula and Korte, Bernhard and Vygen, Jens},
+  journal={Optimization Methods and Software},
+  volume={10},
+  number={2},
+  pages={157--174},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
+
+@article{yu2016space,
+  title={Space shuffle: A scalable, flexible, and high-performance data center network},
+  author={Yu, Ye and Qian, Chen},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={27},
+  number={11},
+  pages={3351--3365},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{zhou2012mirror,
+  title={Mirror mirror on the ceiling: Flexible wireless links for data centers},
+  author={Zhou, Xia and Zhang, Zengbin and Zhu, Yibo and Li, Yubo and Kumar, Saipriya and Vahdat, Amin and Zhao, Ben Y and Zheng, Haitao},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={42},
+  number={4},
+  pages={443--454},
+  year={2012},
+  publisher={ACM}
+}
+
+@inproceedings{teh2017design,
+  title={Design space exploration of the Dragonfly topology},
+  author={Teh, Min Yee and Wilke, Jeremiah J and Bergman, Keren and Rumley, S{\'e}bastien},
+  booktitle={International Conference on High Performance Computing},
+  pages={57--74},
+  year={2017},
+  organization={Springer}
+}
+
+@inproceedings{kim2008dragonfly,
+  title={Technology-driven, highly-scalable dragonfly topology},
+  author={Kim, John and Dally, Wiliam J and Scott, Steve and Abts, Dennis},
+  booktitle={Computer Architecture, 2008. ISCA'08. 35th International Symposium on},
+  pages={77--88},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{besta2014slim,
+  title={Slim fly: A cost effective low-diameter network topology},
+  author={Besta, Maciej and Hoefler, Torsten},
+  booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+  pages={348--359},
+  year={2014},
+  organization={IEEE Press}
+}
+
+@inproceedings{ahn2009hyperx,
+  title={HyperX: topology, routing, and packaging of efficient large-scale networks},
+  author={Ahn, Jung Ho and Binkert, Nathan and Davis, Al and McLaren, Moray and Schreiber, Robert S},
+  booktitle={Proceedings of the Conference on High Performance Computing Networking, Storage and Analysis},
+  pages={41},
+  year={2009},
+  organization={ACM}
+}
+
+@article{guo2009bcube,
+  title={BCube: a high performance, server-centric network architecture for modular data centers},
+  author={Guo, Chuanxiong and Lu, Guohan and Li, Dan and Wu, Haitao and Zhang, Xuan and Shi, Yunfeng and Tian, Chen and Zhang, Yongguang and Lu, Songwu},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={39},
+  number={4},
+  pages={63--74},
+  year={2009},
+  publisher={ACM}
+}
+
+@inproceedings{guo2008dcell,
+  title={Dcell: a scalable and fault-tolerant network structure for data centers},
+  author={Guo, Chuanxiong and Wu, Haitao and Tan, Kun and Shi, Lei and Zhang, Yongguang and Lu, Songwu},
+  booktitle={ACM SIGCOMM Computer Communication Review},
+  volume={38},
+  number={4},
+  pages={75--86},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{greenberg2009vl2,
+  title={VL2: a scalable and flexible data center network},
+  author={Greenberg, Albert and Hamilton, James R and Jain, Navendu and Kandula, Srikanth and Kim, Changhoon and Lahiri, Parantap and Maltz, David A and Patel, Parveen and Sengupta, Sudipta},
+  booktitle={ACM SIGCOMM computer communication review},
+  volume={39},
+  number={4},
+  pages={51--62},
+  year={2009},
+  organization={ACM}
+}
+
+@inproceedings{liu2013f10,
+  title={F10: A Fault-Tolerant Engineered Network.},
+  author={Liu, Vincent and Halperin, Daniel and Krishnamurthy, Arvind and Anderson, Thomas E},
+  booktitle={NSDI},
+  pages={399--412},
+  year={2013}
 }
