--- a/reference.bib
+++ b/reference.bib
@@ -437,3 +437,24 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   pages={399--412},
   year={2013}
 }
+
+@article{farrington2013facebook,
+  title = {Facebook's Data Center Network Architecture},
+  author = {Farrington, Nathan and Andreyev, Alexey},
+  journal = {IEEE Optical Interconnects Conference},
+  month = {May},
+  year = {2013}
+}
+
+@article{cisco2016,
+  title = {Cisco Data Center Spine-and-Leaf Architecture: Design Overview},
+  author = {{Cisco}},
+  journal = {Cisco White Paper},
+  year = {2016}
+}
+
+@misc{calient,
+  author = {{CALIENT Technologies, Inc.}},
+  howpublished= {https://www.calient.net/}
+}
+
