introduced new citation source for silicon photonics paper with nanosecond reconfig time

--- a/reference.bib
+++ b/reference.bib
@@ -458,3 +458,13 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   howpublished= {https://www.calient.net/}
 }
 
+@article{lee2014monolithic,
+  title={Monolithic silicon integration of scaled photonic switch fabrics, CMOS logic, and device driver circuits},
+  author={Lee, Benjamin G and Rylyakov, Alexander V and Green, William MJ and Assefa, Solomon and Baks, Christian W and Rimolo-Donadio, Renato and Kuchta, Daniel M and Khater, Marwan H and Barwicz, Tymon and Reinholm, Carol and others},
+  journal={Journal of Lightwave Technology},
+  volume={32},
+  number={4},
+  pages={743--751},
+  year={2014},
+  publisher={IEEE}
+}
