--- a/reference.bib
+++ b/reference.bib
@@ -468,3 +468,50 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2014},
   publisher={IEEE}
 }
+
+@article{kandula2009flyways,
+  title={Flyways to de-congest data center networks},
+  author={Kandula, Srikanth and Padhye, Jitendra and Bahl, Paramvir},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@inproceedings{kandula2009nature,
+  title={The nature of data center traffic: measurements \& analysis},
+  author={Kandula, Srikanth and Sengupta, Sudipta and Greenberg, Albert and Patel, Parveen and Chaiken, Ronnie},
+  booktitle={Proceedings of the 9th ACM SIGCOMM conference on Internet measurement},
+  pages={202--208},
+  year={2009},
+  organization={ACM}
+}
+
+@inproceedings{atikoglu2012workload,
+  title={Workload analysis of a large-scale key-value store},
+  author={Atikoglu, Berk and Xu, Yuehai and Frachtenberg, Eitan and Jiang, Song and Paleczny, Mike},
+  booktitle={ACM SIGMETRICS Performance Evaluation Review},
+  volume={40},
+  number={1},
+  pages={53--64},
+  year={2012},
+  organization={ACM}
+}
+
+@inproceedings{roy2015facebook,
+  title={Inside the social network's (datacenter) network},
+  author={Roy, Arjun and Zeng, Hongyi and Bagga, Jasmeet and Porter, George and Snoeren, Alex C},
+  booktitle={ACM SIGCOMM Computer Communication Review},
+  volume={45},
+  number={4},
+  pages={123--137},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{benson2011microte,
+  title={MicroTE: Fine grained traffic engineering for data centers},
+  author={Benson, Theophilus and Anand, Ashok and Akella, Aditya and Zhang, Ming},
+  booktitle={Proceedings of the Seventh COnference on emerging Networking EXperiments and Technologies},
+  pages={8},
+  year={2011},
+  organization={ACM}
+}
