--- a/reference.bib
+++ b/reference.bib
@@ -515,3 +515,14 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2011},
   organization={ACM}
 }
+
+@inproceedings{jiang2009indirect,
+  title={Indirect adaptive routing on large scale interconnection networks},
+  author={Jiang, Nan and Kim, John and Dally, William J},
+  booktitle={ACM SIGARCH Computer Architecture News},
+  volume={37},
+  number={3},
+  pages={220--231},
+  year={2009},
+  organization={ACM}
+}
