--- a/reference.bib
+++ b/reference.bib
@@ -26,12 +26,23 @@
 }
 
 @inproceedings{valadarsky2015xpander,
-  title={Xpander: Unveiling the secrets of high-performance datacenters},
+  title={Xpander: Unveiling the Secrets of High-Performance Datacenters},
   author={Valadarsky, Asaf and Dinitz, Michael and Schapira, Michael},
   booktitle={Proceedings of the 14th ACM Workshop on Hot Topics in Networks},
   pages={16},
   year={2015},
   organization={ACM}
+}
+
+@article{dinitz2017explicit,
+  title = {Explicit Expanding Expanders},
+  author = {Dinitz, Michael and Schapira, Michael and Valadarsky, Asaf},
+  journal = {Algorithmica},
+  volume= {78},
+  no={4},
+  pages = {1225--1245},
+  month = {August},
+  year = {2017}
 }
 
 @inproceedings{hamedazimi2014firefly,
