--- a/reference.bib
+++ b/reference.bib
@@ -45,6 +45,14 @@
   year = {2017}
 }
 
+@InProceedings{camarero2017random,
+  title = {Random Folded Clos Topologies for Datacenter Networks},
+  author = {Camarero, Cristobal and Martinez, Carmen and Beivide, Ramon},
+  booktitle = {IEEE International Symposium on High Performance Computer Architecture},
+  month = {February},
+  year = {2017}
+}
+
 @inproceedings{hamedazimi2014firefly,
   title={Firefly: A reconfigurable wireless data center fabric using free-space optics},
   author={Hamedazimi, Navid and Qazi, Zafar and Gupta, Himanshu and Sekar, Vyas and Das, Samir R and Longtin, Jon P and Shah, Himanshu and Tanwer, Ashish},
