--- a/reference.bib
+++ b/reference.bib
@@ -545,3 +545,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2009},
   organization={ACM}
 }
+
+@inproceedings{chen2009incast,
+  title={Understanding TCP incast throughput collapse in datacenter networks},
+  author={Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H and Joseph, Anthony D},
+  booktitle={Proceedings of the 1st ACM workshop on Research on enterprise networking},
+  pages={73--82},
+  year={2009},
+  organization={ACM}
+}
