added citation source

--- a/reference.bib
+++ b/reference.bib
@@ -554,3 +554,11 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2009},
   organization={ACM}
 }
+
+@inproceedings{ardelean2018performance,
+  title={Performance Analysis of Cloud Applications},
+  author={Ardelean, Dan and Diwan, Amer and Erdman, Chandra},
+  booktitle={15th USENIX Symposium on Networked Systems Design and Implementation (NSDI 18)},
+  year={2018},
+  organization={USENIX Association}
+}
