--- a/reference.bib
+++ b/reference.bib
@@ -562,3 +562,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2018},
   organization={USENIX Association}
 }
+
+@article{ghodsi2006dimensionality,
+  title={Dimensionality reduction a short tutorial},
+  author={Ghodsi, Ali},
+  journal={Department of Statistics and Actuarial Science, Univ. of Waterloo, Ontario, Canada},
+  volume={37},
+  pages={38},
+  year={2006}
+}
