--- a/reference.bib
+++ b/reference.bib
@@ -571,3 +571,26 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   pages={38},
   year={2006}
 }
+
+@article{FlowAlgorithm,
+  author = {Jack Edmonds and Richard M. Karp},
+  title = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
+  journal = {Journal of the ACM},
+  volume= {19},
+  no = {2},
+  pages = {248--264},
+  month = {April},
+  year = {1972}
+}
+
+@article{PreFlow,
+  author = {Andrew V. Goldberg and Robert E. Tarjan},
+  title = {A New Approach to the Maximum-Flow Problem},
+  journal = {Journal of the ACM},
+  volume= {35},
+  no = {4},
+  pages = {921--940},
+  month = {October},
+  year = {1988}
+}
+
