--- a/reference.bib
+++ b/reference.bib
@@ -572,7 +572,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2006}
 }
 
-@article{FlowAlgorithm,
+@article{Edmonds1972Theoretical,
   author = {Jack Edmonds and Richard M. Karp},
   title = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
   journal = {Journal of the ACM},
@@ -583,7 +583,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year = {1972}
 }
 
-@article{PreFlow,
+@article{Goldberg1988A,
   author = {Andrew V. Goldberg and Robert E. Tarjan},
   title = {A New Approach to the Maximum-Flow Problem},
   journal = {Journal of the ACM},
