--- a/reference.bib
+++ b/reference.bib
@@ -131,6 +131,27 @@
   organization={ACM}
 }
 
+@inproceedings{Qiao2013Efficient,
+  title={Efficient traffic matrix estimation for data center networks},
+  author={Qiao, Yan and Hu, Zhiming and Luo, Jun},
+  booktitle={IFIP Networking Conference},
+  pages={1--9},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{Mozo2018Forecasting,
+  title={Forecasting short-term data center network traffic load with convolutional neural networks},
+  author={Mozo, Alberto and Ordozgoiti, Bruno and Gomez-Canaval, Sandra},
+  journal={Plos One},
+  volume={13},
+  number={2},
+  year={2018},
+}
+
+
+
+
 @inproceedings{papaioannou2016benefits,
   title={The Benefits of a Disaggregated Data Centre: A Resource Allocation Approach.},
   author={Papaioannou, Antonios D and Nejabati, Reza and Simeonidou, Dimitra},
